Bug 358942 - Usability: Package search in installation dialog does not provide status feedback
Summary: Usability: Package search in installation dialog does not provide status feed...
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: User Interface (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-03 08:53 UTC by Thomas Friedrichsmeier
Modified: 2016-02-15 20:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.friedrichsmeier: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Friedrichsmeier 2016-02-03 08:53:45 UTC
Aaron reports:

Also, this is something I just remembered that bugs me: You put your search
term in the "show packages matching" text field, and then seemingly nothing
happens. In older versions, the drop-down arrows in the list to the left
would disappear if nothing was returned for that search term, leaving only
"New Packages" in the case of a new install. Now nothing happens and you
have to go searching in them.

However, even with the old behavior, many people, even me, instinctively
just hit "enter" after putting in the search term, which just dismisses the
dialog completely.

I think it would be easier if either the relevant packages would display on
the left (i.e., the relevant section would expand itself to display the
package), so that the user knew something had happened, and/or the search
is not begun until the user hits enter/return.

What would also really help would be a little activity indicator next to
the search box. One of these guys:

https://cdn3.iconfinder.com/data/icons/pictofoundry-pro-vector-set/512/LoadingIndicator-512.png

Right now there is no feedback whatsoever to tell the user that something
is happening. This is especially confusing since you don't really go in
here that often. You do it once when you need something, maybe struggle
with it, but ultimately get what you need, and do your analysis, never to
think about it again. Since it's not a part of the program that people use
that much, it needs to be super-clear on how it works, I think.

---Session Info---
-- Frontend --
RKWard version: 0.6.4z+0.6.5+devel1
KDE version (runtime): 4.14.13
KDE version (compile time): 4.14.13
Qt build key: x86_64 linux g++-4 full-config
Local KDE directory: /home/thomas/.kde/
RKWard storage directory: /home/thomas/.rkward/
Backend version (as known to the frontend): 3.2.2

Debug message file (this may contain relevant diagnostic output in case of trouble):
/tmp/rkward.frontend.j19881

-- Backend --
Debug message file (this may contain relevant diagnostic output in case of trouble):
/tmp/rkward.rbackend.J19887

R version (compile time): 3.2.2  (2015-08-14 r69053)
R runtime session info:
R version 3.2.2 (2015-08-14)
Platform: x86_64-pc-linux-gnu (64-bit)
Running under: Ubuntu 15.10

locale:
 [1] LC_CTYPE=en_US.UTF-8          LC_NUMERIC=C                 
 [3] LC_TIME=de_DE.UTF-8           LC_COLLATE=en_US.UTF-8       
 [5] LC_MONETARY=de_DE.UTF-8       LC_MESSAGES=C                
 [7] LC_PAPER=de_DE.UTF-8          LC_NAME=de_DE.UTF-8          
 [9] LC_ADDRESS=de_DE.UTF-8        LC_TELEPHONE=de_DE.UTF-8     
[11] LC_MEASUREMENT=de_DE.UTF-8    LC_IDENTIFICATION=de_DE.UTF-8

attached base packages:
[1] stats     graphics  grDevices utils     datasets  methods   base     

other attached packages:
[1] rkward_0.6.3

loaded via a namespace (and not attached):
[1] tools_3.2.2
Comment 1 Thomas Friedrichsmeier 2016-02-11 10:39:45 UTC
Git commit 322e840709ae25aa72b22fc276d1c2c406620dc1 by Thomas Friedrichsmeier.
Committed on 11/02/2016 at 10:36.
Pushed by tfry into branch 'master'.

Better status feedback when filtering installed / installable packages.
- Display number of packages matching filter in each category
- If there are no matching packages in a category, hide expand/collapse indicator
- Automatically expand "new" and "updatable" (but not "installed") package categories when filter changes
- NOT YET added a status indicator. This will have wait for frameworks / KF5

M  +1    -0    ChangeLog
M  +12   -2    rkward/dialogs/rkloadlibsdialog.cpp
M  +1    -0    rkward/misc/rkdynamicsearchline.cpp

http://commits.kde.org/rkward/322e840709ae25aa72b22fc276d1c2c406620dc1
Comment 2 Thomas Friedrichsmeier 2016-02-15 20:24:12 UTC
Git commit 4931b4fc66c558ad43608d071b2a2a767325719a by Thomas Friedrichsmeier.
Committed on 15/02/2016 at 20:21.
Pushed by tfry into branch 'frameworks'.

Add "activity" indicator to dynamic search lines.

Bug watchers: Note that this is the "framworks"-branch. Not something fixed for the KDE4 version.
The icon itself is not a terribly good choice, yet. But I could not find a KDE standard hourglass icon. Pointers / contributions welcome.
While at it, fix another broken icon.

M  +1    -4    TODO
M  +9    -1    rkward/misc/rkdynamicsearchline.cpp
M  +3    -1    rkward/misc/rkdynamicsearchline.h
M  +7    -4    rkward/misc/rkstandardicons.cpp
M  +2    -0    rkward/misc/rkstandardicons.h

http://commits.kde.org/rkward/4931b4fc66c558ad43608d071b2a2a767325719a