Add "activity" indicator to dynamic search lines.

Bug watchers: Note that this is the "framworks"-branch. Not something fixed for the KDE4 version.
The icon itself is not a terribly good choice, yet. But I could not find a KDE standard hourglass icon. Pointers / contributions welcome.
While at it, fix another broken icon.

BUG: 358942